--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-        <form>
+        <form id="form_">
             <div class="search-container">
                 <div id="search-card" class="search-card-overlay">
                     <div class="row justify-content-center mb-2">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <button id="searcher" type="submit" class="btn btn-outline-success">Submit</button>
+                        <button id="searcher" type="submit" class="btn btn-outline-success">Search</button>
                     </div>
                 </div>
             </div>
