--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Explore NZ</title>
 </head>
-<body>
+<body id="body">
 
     <nav class="navbar">
         <a class="navbar-brand" href="#">
@@ -38,8 +38,8 @@
                             <select id="destination" class="form-control">
                                 <option selected>Destination</option>
                                 <option>Auckland</option>
-                                <option>Nelson</option>
-                                <option>Christchurh</option>
+                                <option>Wellington</option>
+                                <option>Queenstown</option>
                             </select>
                         </div>
                         <div class="form-group col-sm-2">
@@ -83,7 +83,8 @@
                 </div>
             </div>
         </div>
-    
+        <div id="showDetails" class="details">
+        </div>
 
     <script src="javascript/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
